# remember_every_text

./: ARCHITECTURE_RULES.md  README.md  RELEASE_CHECKLIST.md  all_lint_rules.yaml  analysis_options.yaml  pubspec.yaml  test_url_preview_parser.dart  todo_items.md
.github/: copilot-instructions.md  pull_request_template.md
_AGENT_CONTEXT/: 00-code-standards.md  01-addressbook-database-resolution.md  02-architecture-overview.md  03-navigation-overview.md  04-dart-lints-and-patterns.md  05-riverpod-provider-patterns.md  06-flutter-dart-agent-rules.md  07-supabase-mirror-plan.md  08-rust-message-extractor.md  09-rust-url-preview-parser.md  10-database-schema-reference.md  11-data-import-migration-strategy.md  12-native-link-preview-implementation.md  13-sql-database-standards.md  AGENT_CONTEXT.md  MEMORY_SOLUTION_EXPLANATION.md  USER_PREF_OVERLAY_DATABASE_GENERAL.txt  USER_PREF_OVERLAY_DATABASE_RIVERPOD.txt
_DATABASE_DOCUMENTATION/: 0-SCHEMA_IMPORT_DB.sql  1-IMPORT_DB_NOTES.md  2-SCHEMA_WORKING_DB.sql  3-WORKING_DB_NOTES.md
_DDD_MIGRATION_PLAN/: 00-MIGRATION_OVERVIEW.md  01-DOMAIN_CONTRACTS.md  02-AGGREGATE_BOUNDARIES.md  ARCHITECTURE_RULES.md
lib/: api.dart  bootstrap.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  main.dart  providers.dart  providers.g.dart
linux/: CMakeLists.txt
macos/: Podfile
rust/rust/attributed-string-decoder/: Cargo.toml
rust/rust/attributed-string-decoder/src/: api.rs  frb_generated.rs  lib.rs  lib_minimal.rs
supabase/: .gitignore  README.md
test/: widget_test.dart
web/: index.html  manifest.json
(+304 files in other folders)
